@startuml class
!theme plain
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false
skinparam class {
  BackgroundColor white
  BorderColor black
  ArrowColor black
}
skinparam package {
  BackgroundColor white
  BorderColor black
}

package "main" {
  class App {
    pg
    publisher
    finishWorker
    publishWorker
    contributionConsumer
    projectSvc
    server
    --
    Init()
    Run()
  }
}

package "domain" {
  class Project {
    ID
    UserID
    Category
    Name
    Description
    Currency
    GoalAmount
    CurrentAmount
    DurationDays
    StartedAt
    BoostedUntil
    Status
    IsBoosted
  }

  class Application {
    Status
    RejectReason
    CreatedAt
    AssignedAt
    ProcessedAt
    Project
  }

  class CreateProjectReq {
    Category
    Name
    Description
    Currency
    GoalAmount
    DurationDays
  }

  class GetProjectsReq {
    Status
    Sort
    Category
    Search
    Limit
    Offset
  }

  class GetProjectsResp {
    Projects
    Total
  }
}

package "service.project" {
  class Service {
    repo
    promo
    --
    CreateProject()
    GetProjectByID()
    GetProjects()
    GetProjectsByUserID()
    UpdateProject()
    AddContribution()
    ApproveProject()
    RejectProject()
    TakeApplication()
    GetApplicationByProjectID()
    GetPendingApplications()
    GetMyApplications()
    BoostProject()
  }

  class FinishWorker {
    repo
    interval
    metrics
    --
    Run()
  }

  class PublishWorker {
    repo
    publisher
    interval
    batch
    metrics
    --
    Run()
  }
}

package "repo.project" {
  interface Repo {
    CreateProject()
    GetProjectByID()
    GetProjects()
    GetProjectsByUserID()
    UpdateProject()
    FinishProjects()
    AddContribution()
    ApproveProject()
    RejectProject()
    TakeApplication()
    GetApplicationByProjectID()
    GetPendingApplications()
    GetMyApplications()
    BoostProject()
    ListPendingFinishedOutbox()
    MarkSentFinishedOutbox()
  }
}

package "repo.project.postgres" {
  class ProjectRepo {
    db
    --
    CreateProject()
    GetProjectByID()
    GetProjects()
    GetProjectsByUserID()
    UpdateProject()
    FinishProjects()
    AddContribution()
    ApproveProject()
    RejectProject()
    TakeApplication()
    GetApplicationByProjectID()
    GetPendingApplications()
    GetMyApplications()
    BoostProject()
    ListPendingFinishedOutbox()
    MarkSentFinishedOutbox()
  }

  class ProjectDB {
    ID
    UserID
    CategoryID
    Name
    Description
    CurrencyID
    GoalAmount
    CurrentAmount
    StartedAt
    DurationDays
    StatusID
    IsBoosted
    BoostedUntil
  }

  class ApplicationDB {
    StatusID
    AssignedTo
    RejectReason
    CreatedAt
    AssignedAt
    ProcessedAt
  }
}

package "publisher.project" {
  class Publisher {
    writer
    topic
    --
    Publish()
    Close()
  }

  class "Event" as ProjectEvent {
    Type
    Project
  }
}

package "client.promocode" {
  interface Client {
    UsePromoCode()
  }
}

package "client.promocode.resty" {
  class RestyClient {
    client
    baseURL
    --
    UsePromoCode()
  }
}

package "cluster.contribution" {
  class Consumer {
    reader
    svc
    --
    Run()
    Close()
  }

  class "Event" as ContributionEvent {
    EventID
    Type
    ProjectID
    Amount
  }
}

package "api" {
  class Server {
    srv
    router
    --
    AddProjectHandlers()
    AddMetrics()
    ListenAndServe()
  }
}

package "metrics" {
  class FinishWorkerMetrics {
    LastRunUnix
    --
    IncFinished()
  }

  class PublishWorkerMetrics {
    LastRunUnix
  }
}

' Relationships
App *-- Service
App *-- FinishWorker
App *-- PublishWorker
App *-- Consumer
App *-- Server
App *-- Publisher

Service *-- Repo
Service *-- Client
FinishWorker ..> Repo
FinishWorker *-- FinishWorkerMetrics
PublishWorker ..> Repo
PublishWorker *-- Publisher
PublishWorker *-- PublishWorkerMetrics

ProjectRepo ..|> Repo

RestyClient ..|> Client

Application *-- Project
GetProjectsResp *-- Project
ProjectEvent *-- Project

Consumer ..> Service
Consumer ..> ContributionEvent

Server ..> Service

@enduml
